# open-lifeworlds-data-product-berlin-population

./: .gitignore  README.md  data-product-manifest.yml  data-transformation.yml  dpds.yml  main.py  odps.yml  pyproject.toml
data/03-gold/berlin-lor-population-geojson/: berlin-lor-population-2015-01-city.geojson  berlin-lor-population-2015-01-district-regions.geojson  berlin-lor-population-2015-01-districts.geojson  berlin-lor-population-2015-01-forecast-areas.geojson  berlin-lor-population-2015-01-planning-areas.geojson  berlin-lor-population-2015-02-city.geojson  berlin-lor-population-2015-02-district-regions.geojson  berlin-lor-population-2015-02-forecast-areas.geojson  berlin-lor-population-2015-02-planning-areas.geojson  berlin-lor-population-2016-01-city.geojson  berlin-lor-population-2016-01-district-regions.geojson  berlin-lor-population-2016-01-forecast-areas.geojson  berlin-lor-population-2016-01-planning-areas.geojson  berlin-lor-population-2016-02-city.geojson  berlin-lor-population-2016-02-district-regions.geojson  berlin-lor-population-2016-02-forecast-areas.geojson  berlin-lor-population-2016-02-planning-areas.geojson  berlin-lor-population-2017-01-city.geojson  berlin-lor-population-2017-01-district-regions.geojson  berlin-lor-population-2017-01-districts.geojson  berlin-lor-population-2017-01-forecast-areas.geojson  berlin-lor-population-2017-01-planning-areas.geojson  berlin-lor-population-2017-02-city.geojson  berlin-lor-population-2017-02-district-regions.geojson  (+54 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
(+50 files in other folders)
